@@ -23,6 +23,18 @@ dependencies {
     api project(':core')
 }
 
+// Common JVM arguments
+def jvmArguments = [
+        '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
+        '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED'
+]
+
+// Share JVM arguments across test tasks
+tasks.withType(JavaExec).configureEach {
+    jvmArgs(['-XX:+EnableDynamicAgentLoading'] + jvmArguments)
+}
+
 test {
     useJUnitPlatform()
     jvmArgs('-XX:+EnableDynamicAgentLoading')
